fixed leave button getting cut off

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -263,6 +263,7 @@ textarea:focus, input:focus{
   border-radius: 2rem;
   align-items: center;
   align-self: center;
+  margin: 1rem 0;
 }
 
 .header.shrink {
